# Game-Engine

./: CMakeLists.txt  README.md
Dependencies/include/box2d/: b2_body.h  b2_fixture.h  b2_fixture.h~
Dependencies/include/glad/: glad.h
Dependencies/lib/: box2d.lib  yaml-cpp.lib
res/: acreator.anim  player_design.json  player_idle.animation  player_jump.animation  player_run.animation  player_spritesheet.psd  scene.vins  scene.vins~  test.animation  test1.scene  test2.scene
res/shaders/: color.frag  color.vert  entitycolor.frag  entitycolor.vert
src/: Animation.cpp  Animation.h  Application.cpp  Application.h  FontRenderer.cpp  FontRenderer.h  FrameBuffer.cpp  FrameBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  ParticleSystem.cpp  ParticleSystem.h  PerlinNoise.cpp  PerlinNoise.h  Random.cpp  Random.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  SubTexture.h  Texture.cpp  Texture.h  TimeStep.h  Window.cpp  Window.h  WindowsInput.cpp  WindowsInput.h  glad.c  gladr.h  main.cpp  syaml.cpp  syaml.h
src/Development/: Console.cpp  Console.h  EditorLayer.cpp  Editorlayer.h
src/Event/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
src/Scene/: AnimationUtil.cpp  AnimationUtil.h  Components.h  Entity.h  FontDemo.h  Scene.cpp  Scene.h  Serializer.cpp  Serializer.h
src/Scene/Setting/: MainSetting.cpp  MainSetting.h  Setting.cpp  Setting.h
src/Scene/Setting/SetttingUI/: SlideBar.cpp  SlideBar.h
src/Scripts/: ContactListener.h  EnemyGenerator.h  EntityScript.h  ForceApplier.h  MainMenu.h  ObjectID.h  Player.h  Player2.h  PlayerFollowCamera.h  ScriptManager.cpp  ScriptManager.h  enemytest.h  fluid.h  jumper.h  movingpgtest.h  parallax_bg_moving.h
src/Sound/: SoundManager.cpp  SoundManager.h
src/UI/: UI.cpp  UI.h  UIElementData.h
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+4 files in other folders)
